--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ dependencies {
     testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
     testImplementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
+
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testCompileOnly 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 test {
