--- a/build.gradle
+++ b/build.gradle
@@ -24,20 +24,18 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:23.0.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    testImplementation 'com.codeborne:selenide:6.17.0'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testImplementation 'io.rest-assured:rest-assured:5.4.0'
-    testImplementation 'com.google.code.gson:gson:2.8.6'
-    testImplementation 'org.projectlombok:lombok:1.18.22'
-    testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
-    testImplementation 'commons-dbutils:commons-dbutils:1.7'
-    testImplementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    implementation 'com.codeborne:selenide:6.17.0'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+    implementation 'io.rest-assured:rest-assured:5.4.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'org.projectlombok:lombok:1.18.22'
+    implementation 'io.qameta.allure:allure-selenide:2.20.1'
+    implementation 'commons-dbutils:commons-dbutils:1.7'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
-    testCompileOnly 'org.projectlombok:lombok:1.18.30'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 test {
